--- a/src/blocks/photo-grid/__img/photo-grid__img.css
+++ b/src/blocks/photo-grid/__img/photo-grid__img.css
@@ -1,3 +1,9 @@
 .photo-grid__img {
   width: 100%;
+  cursor: pointer;
+}
+
+.photo-grid__img:hover {
+  transform: scale(102%);
+  transition: transform ease 1s;
 }
