--- a/src/blocks/photo-grid/__list/photo-grid__list.css
+++ b/src/blocks/photo-grid/__list/photo-grid__list.css
@@ -7,6 +7,7 @@
   grid-template-columns: 1fr;
   grid-template-rows: repeat(12, 1fr);
   gap: 12px;
+  position: relative;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1024px) {
