--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,8 @@
 
 @import url('./blocks/page/page.css');
 
+@import url('./blocks/button/button.css');
+
 /* mix link */
 
 @import url('./blocks/link/link.css');
@@ -16,6 +18,14 @@
 
 @import url('./blocks/section-title/section-title.css');
 @import url('./blocks/section-subtitle/section-subtitle.css');
+
+/* popup */
+
+@import url('./blocks/popup/popup.css');
+@import url('./blocks/popup/_open/popup_open.css');
+@import url('./blocks/popup/__block/popup__block.css');
+@import url('./blocks/popup/__img/popup__img.css');
+@import url('./blocks/popup/__close-btn/popup__close-btn.css');
 
 /* header */
 
